update for Best Night week 4

--- a/GroupGuide6thGrade.html
+++ b/GroupGuide6thGrade.html
@@ -3,7 +3,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <head>
-  <title>Best Night - Week 3</title>
+  <title>Best Night - Week 4</title>
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   <style>
     body {
@@ -33,79 +33,83 @@
 
   <div align="middle"><img src="./img/best-night.png" alt="Group Guide Series Logo" style="max-width:80%;height:auto;"></div>
 
-  <h1>Week 3 - Why We Group</h1>
+  <h1>Week 4 - Why We Worship</h1>
   
-  <p><b>What we want students to learn:</b> God’s best for you is in a small group! You were not made to do life alone!</p>
+  <p><b>What we want students to learn:</b> Worship is our response to God.</p>
 
-  <p><b>What we want students to do with what they've learned:</b> Students should use their life groups as a place where they can encourage others, be encouraged, and grow together. These relationships should extend beyond one night a week.</p>
+  <p><b>What we want students to do with what they've learned:</b> Love God by worshipping God.</p>
 
-  <p><b>Scripture Focus:</b> Acts 2:42-44, 46-47</p>
-
-  <p><b>Supporting Scripture:</b> Ecclesiastes 4:9-12</p>
+  <p><b>Scripture Focus:</b> Colossians 3:2</p>
 
   <p><b>Small Group Tip:</b> Don’t forget that you have access to the “throw and tell conversation starter ball” if you get done early or want to take a break during the lesson.</p>
 
   <h2>The Main Point</h2>
 
-  <p>Life is hard, and when you try to do it alone, it is even harder.  From the beginning, God realized that man was not meant to be alone. Throughout the bible, the term “one another” is used more than 50 times.  God designed us to have relationships.  We were meant to do life together, encourage each other, pray for each other, and love each other. At fpStudents, that starts with our small groups.</p>
+  <p>Have you noticed any trends as you watch your students worship? Do they look confused? Do they mimic the 9th grader standing in front of them? Do they sing along? Do they scan the room? Do they play on their phone? Tonight we want you to enter into a discussion with your 6th graders about why we worship and how we worship. Often times, their distraction isn’t because they don’t want to worship. It is simply that they don’t understand what worship is.</p>
+  
+  <p>So, what is worship? Worship is our response to God. Worship is one way we can love God by focusing on who He is and praising Him for it. Worship can take on many forms. But, tonight we are going to talk about the corporate worship that takes place here at FPS.</p>
 
-  <h2>Ice Breaker</h2>
+  <h2>Introduction</h2>
 
-  <p>This week we are going to keep the ice breaker simple.  Just give each of the students a chance to talk about their week.  Either the best thing that happened, or the worst thing that happened.  Try to keep it short, and give everyone a chance to speak.  After each person finishes, ask the rest of the group how many of them knew about that event.</p>
+  <p class="question">What is your favorite thing to do?</p>
 
-  <p>All too often, our life groups begin and end on Wednesday night, and don’t continue throughout the week.  Tonight we are going to talk about groups, and how God intended us to encourage and support each other throughout our entire lives.</p>
+  <p>Whatever students spend the most time on is what they worship most. Usually these things are earthly things: cell phones, social medias, school, etc. Now, these things aren’t bad things. In fact, some of them are even really good things. But, as a leader you know how quickly things can get in-between you and Jesus.</p>
+
+  <p>PRAY as you begin your small group time that your students would be encouraged to love Jesus by worshiping Jesus.</p>
 
   <hr>
 
   <h2>Lesson</h2>
   
-  <p class="question">So far, what is your favorite part about being in a FPS small group?</p>
+  <p>To kick off the lesson for tonight, have a student read Colossians 3:2 aloud.</p>
 
-  <p>Have a student read Acts 2:42-44. Then ask the following questions:</p>
+  <p>Colossians 3:2 – “Set your minds on things above, not on earthly things.”</p>
 
-  <p class="question">What does fellowship mean to you?</p>
+  <p class="question">What do you think the author was talking about when they said “things above?”</p>
 
-  <p class="answer">Help the students explore what the bible meant by fellowship – not just hanging out with friends.</p>
+  <p class="answer">Consider having students read The Message version. It summarizes this passage in a way that is easier to understand.</p>
 
-  <p class="question">According to these verses, what did these people do together?</p>
+  <p class="answer">To think about things above, means to think about things the way Jesus calls us to. Let’s say your student is in a fight with their sibling. When they think about things as Jesus would they can make a few conclusions: Jesus loves me even though me and my sibling are fighting, Jesus wants me to forgive them, and we can get along again with Jesus’ help.</p>
 
-  <p class="answer">They listened to teaching together, grew together, prayed together, ate together, and worshipped God together.</p>
+  <p class="question">What does this verse mean when it says “earthly things?”</p>
 
-  <p class="question">What are some things that good friends do for each other?</p>
+  <p class="answer">Earthly things are the things around us, including: friends, social media, school, family, sports, popularity, etc.</p>
 
-  <p class="answer">Good friends don’t just post pictures with each other. Good friends encourage one another and point each other back to Jesus. That is exactly what this group of believers did. They pointed each other to Jesus consistently.</p>
+  <p class="question">Which one do you focus on the most? Things above or earthly things?</p>
 
-  <p>Now have a student read Ecclesiastes 4:9-12.  Explain to your students that we were meant to do life together, support each other and encourage each other.  Then ask the following questions:</p>
+  <p class="answer">Encourage your students that you aren’t just looking for the “good church answer.” Sure, we wish they focused on Jesus more than anything else, but that’s probably not their reality.</p>
 
-  <p class="question">Who is somebody you can rely on to help you when you fall?</p>
+  <p class="question">Do you think it’s bad to focus on other things besides Jesus? Why or why not?</p>
 
-  <p class="question">Who in your life is encouraging you and praying for you?</p>
+  <p class="answer">There are tons of good things we can focus on. In fact, it’s not wrong to focus on other things at all. But, Jesus just asks us to not make those things greater than He is in our minds. Our students can’t avoid thinking about school. Instead, as they grow and mature, Jesus can become their filter through the way they think about school.</p>
 
-  <p class="question">Who are you encouraging and praying for?</p>
+  <p>During this series, we are going to be talking about worship. Before going any farther, let’s make sure everyone understands what worship is.</p>
+
+  <p class="question">In one or two words, what is worship?</p>
+
+  <p>Worship is our way of responding to God. When we worship God, we are loving God. When students love something, whether that be their dog, sibling (sometimes), parent, or sport they show their love for it by what they think, do and say. When we love something, we know it and so do others.</p>
+
+  <p class="question">What are some ways you can worship?</p>
+
+  <p class="answer">While the obvious answer to your students may be singing, there are tons of other ways. This can include writing, playing an instrument, talking about Jesus with friends, etc. Encourage your students to think outside of the box with this question.</p>
 
   <hr>
 
   <h2>Life Application</h2>
   
-  <p>Now let’s go back to the verses in Acts 2 one more time.  Have a student read Acts 2:46-47, and then ask the following life application questions:</p>
-  
-  <p class="question">Do you think that just meeting and talking on Wednesday nights is enough? Why or why not?</p>
+  <p>Worship at FPS is a whole different experience for our 6th graders. So, we want to meet them right where they are. What do you want for your 6th graders to experience during worship? Spend a minute or two telling your 6th graders what you hope they get to experience as they worship Jesus at FPS. Maybe, one hope is that even for just a moment they are able to focus on Jesus when life is crazy and chaotic. Maybe, one hope is that worship is their escape from everything that seems to be going wrong in their life as they turn to Jesus.</p>
 
-  <p class="question">We want our small groups to be a place where students feel safe and encouraged to talk about what is happening in their life. What is one step you all, as a group, can take to make this a safe and encouraging place?</p>
+  <p>We worship things because we attribute some sort of worth to them. Do you ever think about why you worship what you worship? Now, ask the following question to close out small group.</p>
 
-  <p class="question">How can we, as a small group, continue to support each other throughout the week?</p>
+  <p class="question">We have so many reasons to worship Jesus. What is one reason you want to worship Jesus?</p>
 
-  <p class="answer">Our students live in a technologically driven world.  Brainstorm ways that your group can leverage that technology to make small group last throughout the week, not just on Wednesday night.</p>
+  <p class="answer">Example answers: He loves me, He died for me, He is the greatest of all, etc.</p>
 
   <hr>
 
-  <h2>Closing Activity</h2>
-
-  <p>Does your small group still have your conversation starter ball? If time allows spend the rest of group time tossing it around, having students answer questions. Great friendships aren’t just built on serious things. Having fun is one of the best parts about friendships too!</p>
-
   <h2>Take It Out</h2>
   
-  <p>Close small group out with prayer requests. Encourage students to share things that are really impacting them personally. Remind them that prayer requests don’t have to only happen on Wednesday nights, and that they can be praying for each other daily.</p>
+  <p>Close small group out with prayer requests. Pray that students would experience the love of Jesus as they worship Him.</p>
   
   <p>After prayer, be sure to remind them of any upcoming group serving activities or student events and THE WEEKEND!</p>
 
