--- a/GroupGuide.html
+++ b/GroupGuide.html
@@ -3,7 +3,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <head>
-  <title>DNA - Week 6</title>
+  <title>At the Movies - Week 1</title>
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   <style>
     body {
@@ -33,39 +33,40 @@
 
   <div align="middle"><img src="./img/guide-logo.png" alt="Group Guide Series Logo" style="max-width:80%;height:auto;"></div>
   
-  <h1><i>DNA</i> Week 6</h1>
+  <h1><i>At the Movies</i> Week 1</h1>
 
   <h2>Life / Intro Questions (Choose one or two)</h2>
 
     <ul>
-      <li>What was the most exciting thing that happened in your life this week?</li>
-      <li>If you had to choose one word to represent the theme of your life this week, what word would you choose and why?</li>
+      <li>High School Groups - What movie were the clips from? Do you like that movie?</li>
+      <li>Middle School Groups - Take a guess on what different movies they’re going to play throughout the series.</li>
     </ul>
 
   <h2>Connection Question</h2>
 
     <ul>
-      <li>Has there ever been a time in your life when you felt like you were bursting with news? Was it your news to share? Did you share it? Why, or why not? Give an example.</li>
+      <li>Have you ever felt unqualified? Maybe those around you are better equipped for something than you? Share a story of when this happened.</li>
     </ul>
 
   <h2>Sermon in a Sentence</h2>
 
     <ul>
-      <li>God tells His story through His people.</li>
+      <li>God does not call the equipped, he equips the called.</li>
     </ul>
 
   <h2>Scripture</h2>
  
     <ul>
-      <li><b>2 Corinthians 5:20</b> We are therefore Christ's ambassadors, as though God were making His appeal through us. We implore you on Christ's behalf: be reconciled to God.</li>
-      <li>What do you think it means to be an ambassador for Christ?</li>
+      <li><b>2 Corinthians 3:5</b> It is not that we think we are qualified to do anything on our own. Our qualification comes from God.</li>
+      <li>What is Jesus saying in this scripture?</li>
     </ul>
 
   <h2>Discussion Questions</h2>
 
   <ul>
-    <li>If you are working to become a representative of Christ, what should that look like in your life? If you were the only example your friends had of God, who would they think He is?</li>
-    <li>What steps can you take to tell your loved ones about Jesus?</li>
+    <li>Do you ever not feel qualified for something? Maybe because you’re too young, uneducated, and too dependent? Give examples.</li>
+    <li>How many of you play sports or are involved in something with a group? How often do you find yourself following your teammates more than God? Explain a time.</li>
+    <li>Do you think that God can call you to do great things before you’re equipped with the ability to do those great things?</li>
   </ul>
 
   <h2>Life Application</h2>
@@ -73,16 +74,15 @@
     <p>We want students walking away with 1 or 2 things they are going to do SOON to apply what they discussed.</p>
 
     <ul>
-      <li>Who do you know who most needs to be introduced to the love and hope of Jesus? What can you do right now to let them know that they are loved and created with purpose?</li>
-      <li>How can you grow closer to God personally, in order to be a better example of Him to those around you?</li>
+      <li>Right now in your life, what do you think God has called you to do?</li>
+      <li>How can you faithfully trust that God will equip you so you can live out His calling this week?</li>
     </ul>
 
   <h2>Take It Out</h2>
 
   <ul>
     <li>Close small group out with prayer requests.</li>
-    <li>Pray specifically for the upcoming week that your students will work actively to nurture their relationship with Jesus, and that they will have the strength and boldness to step out and share His story with those around them.</li>
-    <li>After prayer, remind them to keep burying themselves in the Word, because it is only through strengthening their own relationships with God that they can share His love with others.</li>
+    <li>After prayer, remind them of THE WEEKEND and any upcoming group events!</li>
   </ul>
 
   </body>
