update for ATM week 2

--- a/GroupGuide.html
+++ b/GroupGuide.html
@@ -3,7 +3,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <head>
-  <title>At the Movies - Week 1</title>
+  <title>At the Movies - Week 2</title>
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   <style>
     body {
@@ -33,40 +33,40 @@
 
   <div align="middle"><img src="./img/guide-logo.png" alt="Group Guide Series Logo" style="max-width:80%;height:auto;"></div>
   
-  <h1><i>At the Movies</i> Week 1</h1>
+  <h1><i>At the Movies</i> Week 2</h1>
 
   <h2>Life / Intro Questions (Choose one or two)</h2>
 
     <ul>
-      <li>High School Groups - What movie were the clips from? Do you like that movie?</li>
-      <li>Middle School Groups - Take a guess on what different movies they’re going to play throughout the series.</li>
+      <li>Do you believe in life on another planet? How do you picture them?</li>
+      <li>Do you think it’s harder to grow up now or in the past? Why or why not?</li>
     </ul>
 
   <h2>Connection Question</h2>
 
     <ul>
-      <li>Have you ever felt unqualified? Maybe those around you are better equipped for something than you? Share a story of when this happened.</li>
+      <li>We all live in the constant pressure of this society. Do you ever feel like you are losing yourself because of all the pressures we face? How so?</li>
     </ul>
 
   <h2>Sermon in a Sentence</h2>
 
     <ul>
-      <li>God does not call the equipped, he equips the called.</li>
+      <li>We are <i>in</i> this world but we are not <i>of</i> this world.</li>
     </ul>
 
   <h2>Scripture</h2>
  
     <ul>
-      <li><b>2 Corinthians 3:5</b> It is not that we think we are qualified to do anything on our own. Our qualification comes from God.</li>
+      <li>1 John 4:4 “You, dear children, are from God and have overcome them, because the one who is in you is greater than the one who is in the world.”</li>
       <li>What is Jesus saying in this scripture?</li>
     </ul>
 
   <h2>Discussion Questions</h2>
 
   <ul>
-    <li>Do you ever not feel qualified for something? Maybe because you’re too young, uneducated, and too dependent? Give examples.</li>
-    <li>How many of you play sports or are involved in something with a group? How often do you find yourself following your teammates more than God? Explain a time.</li>
-    <li>Do you think that God can call you to do great things before you’re equipped with the ability to do those great things?</li>
+    <li>What kind of pressures has society put on you? (maybe depending on gender of group insert either female or male)</li>
+    <li>Do you know who you are? What are your opinions, beliefs, thoughts about this world?</li>
+    <li>What do you think it means when it says “We are in this world but are not of this world?”</li>
   </ul>
 
   <h2>Life Application</h2>
@@ -74,8 +74,8 @@
     <p>We want students walking away with 1 or 2 things they are going to do SOON to apply what they discussed.</p>
 
     <ul>
-      <li>Right now in your life, what do you think God has called you to do?</li>
-      <li>How can you faithfully trust that God will equip you so you can live out His calling this week?</li>
+      <li>What steps can we take this week to start turning away from the pressures of society?</li>
+      <li>How and what can you ask from friends, family, and God this week to be able to find ourselves?</li>
     </ul>
 
   <h2>Take It Out</h2>
