--- a/GroupGuide.html
+++ b/GroupGuide.html
@@ -3,7 +3,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <head>
-  <title>At the Movies - Week 2</title>
+  <title>At the Movies - Week 3</title>
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   <style>
     body {
@@ -33,40 +33,40 @@
 
   <div align="middle"><img src="./img/guide-logo.png" alt="Group Guide Series Logo" style="max-width:80%;height:auto;"></div>
   
-  <h1><i>At the Movies</i> Week 2</h1>
+  <h1><i>At the Movies</i> Week 3</h1>
 
   <h2>Life / Intro Questions (Choose one or two)</h2>
 
     <ul>
-      <li>Do you believe in life on another planet? How do you picture them?</li>
-      <li>Do you think it’s harder to grow up now or in the past? Why or why not?</li>
+      <li>If you could have one superpower, what would it be and why?</li>
+      <li>Was one of your guesses for which movies we were going to watch Captain Marvel?</li>
     </ul>
 
   <h2>Connection Question</h2>
 
     <ul>
-      <li>We all live in the constant pressure of this society. Do you ever feel like you are losing yourself because of all the pressures we face? How so?</li>
+      <li>Do you ever feel controlled or limited in what you can do? How so?</li>
     </ul>
 
   <h2>Sermon in a Sentence</h2>
 
     <ul>
-      <li>We are <i>in</i> this world but we are not <i>of</i> this world.</li>
+      <li>Know where your power comes from.</li>
     </ul>
 
   <h2>Scripture</h2>
  
     <ul>
-      <li>1 John 4:4 “You, dear children, are from God and have overcome them, because the one who is in you is greater than the one who is in the world.”</li>
+      <li>Ephesians 3:20 “God can do anything, you know- far more than you could ever imagine or guess or request in your wildest dreams! He does it not by pushing us around but by working within us, his Spirit deeply and gently within us.”</li>
       <li>What is Jesus saying in this scripture?</li>
     </ul>
 
   <h2>Discussion Questions</h2>
 
   <ul>
-    <li>What kind of pressures has society put on you? (maybe depending on gender of group insert either female or male)</li>
-    <li>Do you know who you are? What are your opinions, beliefs, thoughts about this world?</li>
-    <li>What do you think it means when it says “We are in this world but are not of this world?”</li>
+    <li>Although we know our power comes from God, why do you think we act like our power came from ourselves? Why do you think we praise ourselves instead of God?</li>
+    <li>Do you think you have less potential when you act like your power came from yourself?</li>
+    <li>Who or what are you fighting right now? (could be family, friends, or even themselves) Why are you fighting that thing and do you blame God for fighting with that thing? Why or why not?</li>
   </ul>
 
   <h2>Life Application</h2>
@@ -74,8 +74,8 @@
     <p>We want students walking away with 1 or 2 things they are going to do SOON to apply what they discussed.</p>
 
     <ul>
-      <li>What steps can we take this week to start turning away from the pressures of society?</li>
-      <li>How and what can you ask from friends, family, and God this week to be able to find ourselves?</li>
+      <li>What steps can we take this week to praise God when we do good instead of praising ourselves?</li>
+      <li>If you feel as though your life is out of control in some aspects, how can you help improve this?</li>
     </ul>
 
   <h2>Take It Out</h2>
