update for ATM week 4

--- a/GroupGuide.html
+++ b/GroupGuide.html
@@ -3,7 +3,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <head>
-  <title>At the Movies - Week 3</title>
+  <title>At the Movies - Week 4</title>
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   <style>
     body {
@@ -33,40 +33,40 @@
 
   <div align="middle"><img src="./img/guide-logo.png" alt="Group Guide Series Logo" style="max-width:80%;height:auto;"></div>
   
-  <h1><i>At the Movies</i> Week 3</h1>
+  <h1><i>At the Movies</i> Week 4</h1>
 
   <h2>Life / Intro Questions (Choose one or two)</h2>
 
     <ul>
-      <li>If you could have one superpower, what would it be and why?</li>
-      <li>Was one of your guesses for which movies we were going to watch Captain Marvel?</li>
+      <li>Who is your favorite super villain and why?</li>
+      <li>Why do you think some super villains don’t have any powers? If they don’t have powers how are they so powerful?</li>
     </ul>
 
   <h2>Connection Question</h2>
 
     <ul>
-      <li>Do you ever feel controlled or limited in what you can do? How so?</li>
+      <li>When do you feel the most divided from people? Give examples.</li>
     </ul>
 
   <h2>Sermon in a Sentence</h2>
 
     <ul>
-      <li>Know where your power comes from.</li>
+      <li>A house divided can’t stand.</li>
     </ul>
 
   <h2>Scripture</h2>
  
     <ul>
-      <li>Ephesians 3:20 “God can do anything, you know- far more than you could ever imagine or guess or request in your wildest dreams! He does it not by pushing us around but by working within us, his Spirit deeply and gently within us.”</li>
+      <li>Ephesians 6:12 KJV "For we wrestle not against flesh and blood, but against principalities, against powers, against the rulers of the darkness of this world, against spiritual wickedness in high places."</li>
       <li>What is Jesus saying in this scripture?</li>
     </ul>
 
   <h2>Discussion Questions</h2>
 
   <ul>
-    <li>Although we know our power comes from God, why do you think we act like our power came from ourselves? Why do you think we praise ourselves instead of God?</li>
-    <li>Do you think you have less potential when you act like your power came from yourself?</li>
-    <li>Who or what are you fighting right now? (could be family, friends, or even themselves) Why are you fighting that thing and do you blame God for fighting with that thing? Why or why not?</li>
+    <li>Who or what are some enemies in your life right now? How often do forget that the real enemy is Satan?</li>
+    <li>Who is on your team? (It could be friends, family, and hopefully God) How do these teammates help you grow stronger?</li>
+    <li>Do you think that the enemies you have should not be enemies at all? What happens when you’re fighting each other instead of knowing who the true enemy is, Satan?</li>
   </ul>
 
   <h2>Life Application</h2>
@@ -74,8 +74,8 @@
     <p>We want students walking away with 1 or 2 things they are going to do SOON to apply what they discussed.</p>
 
     <ul>
-      <li>What steps can we take this week to praise God when we do good instead of praising ourselves?</li>
-      <li>If you feel as though your life is out of control in some aspects, how can you help improve this?</li>
+      <li>What steps can we take this week to create more friends and teammates instead of creating more enemies?</li>
+      <li>How can you put back together your divided team this week? Maybe this means mending relationships, saying your sorry to your parents or siblings, or even just forgiving someone that needs to be forgiven.</li>
     </ul>
 
   <h2>Take It Out</h2>
