update for Influencer week 1

--- a/GroupGuide.html
+++ b/GroupGuide.html
@@ -3,7 +3,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <head>
-  <title>At the Movies - Week 4</title>
+  <title>Influencer - Week 1</title>
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   <style>
     body {
@@ -31,42 +31,42 @@
 
 <body>
 
-  <div align="middle"><img src="./img/guide-logo.png" alt="Group Guide Series Logo" style="max-width:80%;height:auto;"></div>
+  <div align="middle"><img src="./img/fps-logo.png" alt="Group Guide Series Logo" style="max-width:80%;height:auto;"></div>
   
-  <h1><i>At the Movies</i> Week 4</h1>
+  <h1><i>Influencer</i> Week 1</h1>
 
   <h2>Life / Intro Questions (Choose one or two)</h2>
 
     <ul>
-      <li>Who is your favorite super villain and why?</li>
-      <li>Why do you think some super villains don’t have any powers? If they don’t have powers how are they so powerful?</li>
+      <li>How did you guys like the “At the Movies” series? Pros and cons?</li>
+      <li>What kind of influences do you have in your life? Good and bad.</li>
     </ul>
 
   <h2>Connection Question</h2>
 
     <ul>
-      <li>When do you feel the most divided from people? Give examples.</li>
+      <li>Has there ever been a time in your life where you or someone else was the unspoken leader? They weren’t declared the leader by anyone, they just stepped up to the plate and everyone followed.</li>
     </ul>
 
   <h2>Sermon in a Sentence</h2>
 
     <ul>
-      <li>A house divided can’t stand.</li>
+      <li>Leadership is influence.</li>
     </ul>
 
   <h2>Scripture</h2>
  
     <ul>
-      <li>Ephesians 6:12 KJV "For we wrestle not against flesh and blood, but against principalities, against powers, against the rulers of the darkness of this world, against spiritual wickedness in high places."</li>
+      <li>Romans 12:2 “Do not be conformed to this world, but be transformed by the renewal of your mind, that by testing you may discern what is the will of God, what is good and acceptable and perfect.”</li>
       <li>What is Jesus saying in this scripture?</li>
     </ul>
 
   <h2>Discussion Questions</h2>
 
   <ul>
-    <li>Who or what are some enemies in your life right now? How often do forget that the real enemy is Satan?</li>
-    <li>Who is on your team? (It could be friends, family, and hopefully God) How do these teammates help you grow stronger?</li>
-    <li>Do you think that the enemies you have should not be enemies at all? What happens when you’re fighting each other instead of knowing who the true enemy is, Satan?</li>
+    <li>Think about the 5 closest people to you. How do they impact your life on a day to day? What examples are they setting for you to live by?</li>
+    <li>What habits have you created for yourself? Good ones AND bad ones. How do you think these habits have helped you or hurt you?</li>
+    <li>How often do you find yourself saying that your influence isn’t enough to impact someone? Explain.</li>
   </ul>
 
   <h2>Life Application</h2>
@@ -74,8 +74,7 @@
     <p>We want students walking away with 1 or 2 things they are going to do SOON to apply what they discussed.</p>
 
     <ul>
-      <li>What steps can we take this week to create more friends and teammates instead of creating more enemies?</li>
-      <li>How can you put back together your divided team this week? Maybe this means mending relationships, saying your sorry to your parents or siblings, or even just forgiving someone that needs to be forgiven.</li>
+      <li>What steps can you take this week to grow as a kingdom influencer? Encourage them to step into the word of God because to be an influencer, you have to grow a relationship with God.</li>
     </ul>
 
   <h2>Take It Out</h2>
