prep for Influencer week 3

--- a/FutureGroupGuides/week3.html
+++ b/FutureGroupGuides/week3.html
@@ -3,7 +3,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <head>
-  <title>Influencer - Week 1</title>
+  <title>Influencer - Week 3</title>
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   <style>
     body {
@@ -33,40 +33,40 @@
 
   <div align="middle"><img src="./img/fps-logo.png" alt="Group Guide Series Logo" style="max-width:80%;height:auto;"></div>
   
-  <h1><i>Influencer</i> Week 1</h1>
+  <h1><i>Influencer</i> Week 3</h1>
 
   <h2>Life / Intro Questions (Choose one or two)</h2>
 
     <ul>
-      <li>How did you guys like the “At the Movies” series? Pros and cons?</li>
-      <li>What kind of influences do you have in your life? Good and bad.</li>
+      <li>How long does it take for you to get ready in the morning?</li>
+      <li>Would you rather get up later in the morning and not look the best or get up earlier to make your outer appearance look great?</li>
     </ul>
 
   <h2>Connection Question</h2>
 
     <ul>
-      <li>Has there ever been a time in your life where you or someone else was the unspoken leader? They weren’t declared the leader by anyone, they just stepped up to the plate and everyone followed.</li>
+      <li>How often do you find yourself caring more about your outer appearance than your inner appearance?</li>
     </ul>
 
   <h2>Sermon in a Sentence</h2>
 
     <ul>
-      <li>Leadership is influence.</li>
+      <li>Influence grows inside out.</li>
     </ul>
 
   <h2>Scripture</h2>
  
     <ul>
-      <li>Romans 12:2 “Do not be conformed to this world, but be transformed by the renewal of your mind, that by testing you may discern what is the will of God, what is good and acceptable and perfect.”</li>
+      <li>Matthew 7:3-5 “Why do you see the speck that is in your brother's eye, but do not notice the log that is in your own eye? Or how can you say to your brother, ‘Let me take the speck out of your eye,’ when there is the log in your own eye? You hypocrite, first take the log out of your own eye, and then you will see clearly to take the speck out of your brother's eye.”</li>
       <li>What is Jesus saying in this scripture?</li>
     </ul>
 
   <h2>Discussion Questions</h2>
 
   <ul>
-    <li>Think about the 5 closest people to you. How do they impact your life on a day to day? What examples are they setting for you to live by?</li>
-    <li>What habits have you created for yourself? Good ones AND bad ones. How do you think these habits have helped you or hurt you?</li>
-    <li>How often do you find yourself saying that your influence isn’t enough to impact someone? Explain.</li>
+    <li>What negative and positive habits do you have? Share them.</li>
+    <li>How often do you find yourself thinking you know everything? Be honest. Explain.</li>
+    <li>If I asked you who you are, would you be able to tell me? What are your strengths, weaknesses, values, etc.?</li>
   </ul>
 
   <h2>Life Application</h2>
@@ -74,7 +74,8 @@
     <p>We want students walking away with 1 or 2 things they are going to do SOON to apply what they discussed.</p>
 
     <ul>
-      <li>What steps can you take this week to grow as a kingdom influencer? Encourage them to step into the word of God because to be an influencer, you have to grow a relationship with God.</li>
+      <li>If you are not self aware already, what are some things you could do to become more self aware?</li>
+      <li>fpStudents Instagram will be having a 60 second clip teaching you about the basics of kingdom influence so make sure you take a MINUTE out of your day to listen to it and learn something from it. Next week we will come back and each talk about something we took away from the clips.</li>
     </ul>
 
   <h2>Take It Out</h2>
