prep for Influencer week 4

--- a/FutureGroupGuides/week4.html
+++ b/FutureGroupGuides/week4.html
@@ -3,7 +3,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <head>
-  <title>Influencer - Week 1</title>
+  <title>Influencer - Week 4</title>
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   <style>
     body {
@@ -33,40 +33,40 @@
 
   <div align="middle"><img src="./img/fps-logo.png" alt="Group Guide Series Logo" style="max-width:80%;height:auto;"></div>
   
-  <h1><i>Influencer</i> Week 1</h1>
+  <h1><i>Influencer</i> Week 4</h1>
 
   <h2>Life / Intro Questions (Choose one or two)</h2>
 
     <ul>
-      <li>How did you guys like the “At the Movies” series? Pros and cons?</li>
-      <li>What kind of influences do you have in your life? Good and bad.</li>
+      <li>What are some ways to serve others?</li>
+      <li>Personally, what stops you from serving others? Give examples.</li>
     </ul>
 
   <h2>Connection Question</h2>
 
     <ul>
-      <li>Has there ever been a time in your life where you or someone else was the unspoken leader? They weren’t declared the leader by anyone, they just stepped up to the plate and everyone followed.</li>
+      <li>Have you ever chosen not to serve someone because you did not want to, but you knew you should have? Explain.</li>
     </ul>
 
   <h2>Sermon in a Sentence</h2>
 
     <ul>
-      <li>Leadership is influence.</li>
+      <li>To Influence is to Serve.</li>
     </ul>
 
   <h2>Scripture</h2>
  
     <ul>
-      <li>Romans 12:2 “Do not be conformed to this world, but be transformed by the renewal of your mind, that by testing you may discern what is the will of God, what is good and acceptable and perfect.”</li>
+      <li>John 13:4-5 “so he got up from the meal, took off his outer clothing, and wrapped a towel around his waist. 5 After that, he poured water into a basin and began to wash his disciples’ feet, drying them with the towel that was wrapped around him.”</li>
       <li>What is Jesus saying in this scripture?</li>
     </ul>
 
   <h2>Discussion Questions</h2>
 
   <ul>
-    <li>Think about the 5 closest people to you. How do they impact your life on a day to day? What examples are they setting for you to live by?</li>
-    <li>What habits have you created for yourself? Good ones AND bad ones. How do you think these habits have helped you or hurt you?</li>
-    <li>How often do you find yourself saying that your influence isn’t enough to impact someone? Explain.</li>
+    <li>What does “going the extra mile” mean? What things in your life are you going the extra mile for? What do you think would happen if you went the extra mile in being an influencer?</li>
+    <li>What does integrity mean? Personally, do you think you have good integrity? When no one is looking are you always doing the right thing?</li>
+    <li>Being honest, are you the type of person that cares for people? Will you help someone who needs help even if it’s uncomfortable or awkward?</li>
   </ul>
 
   <h2>Life Application</h2>
@@ -74,7 +74,7 @@
     <p>We want students walking away with 1 or 2 things they are going to do SOON to apply what they discussed.</p>
 
     <ul>
-      <li>What steps can you take this week to grow as a kingdom influencer? Encourage them to step into the word of God because to be an influencer, you have to grow a relationship with God.</li>
+      <li>If you go the extra mile, care for people, and do what is right when no one is watching, God can use you for anything. This week, what one thing can you work on? Going the extra mile, caring for people, or having integrity?</li>
     </ul>
 
   <h2>Take It Out</h2>
