--- a/FutureGroupGuides/week4.html
+++ b/FutureGroupGuides/week4.html
@@ -31,7 +31,7 @@
 
 <body>
 
-  <div align="middle"><img src="./img/fps-logo.png" alt="Group Guide Series Logo" style="max-width:80%;height:auto;"></div>
+  <div align="middle"><img src="./img/guide-logo.jpg" alt="Group Guide Series Logo" style="max-width:80%;height:auto;"></div>
   
   <h1><i>Influencer</i> Week 4</h1>
 
