update for Influencer week 2

--- a/GroupGuide.html
+++ b/GroupGuide.html
@@ -3,7 +3,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <head>
-  <title>Influencer - Week 1</title>
+  <title>Influencer - Week 2</title>
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   <style>
     body {
@@ -33,40 +33,40 @@
 
   <div align="middle"><img src="./img/guide-logo.jpg" alt="Group Guide Series Logo" style="max-width:80%;height:auto;"></div>
   
-  <h1><i>Influencer</i> Week 1</h1>
+  <h1><i>Influencer</i> Week 2</h1>
 
   <h2>Life / Intro Questions (Choose one or two)</h2>
 
     <ul>
-      <li>How did you guys like the “At the Movies” series? Pros and cons?</li>
-      <li>What kind of influences do you have in your life? Good and bad.</li>
+      <li>Who are some of your biggest influences in your life? Could be family, friends, or even someone famous.</li>
+      <li>Why are those people such big influences in your life? Give examples.</li>
     </ul>
 
   <h2>Connection Question</h2>
 
     <ul>
-      <li>Has there ever been a time in your life where you or someone else was the unspoken leader? They weren’t declared the leader by anyone, they just stepped up to the plate and everyone followed.</li>
+      <li>Where do you see yourself in the future? Job, family, finances? Are the people in your life supporting you in a way so that you can obtain the future that you want or are they dragging you away from that?</li>
     </ul>
 
   <h2>Sermon in a Sentence</h2>
 
     <ul>
-      <li>Leadership is influence.</li>
+      <li>Who is leading you and where are they leading you to?</li>
     </ul>
 
   <h2>Scripture</h2>
  
     <ul>
-      <li>Romans 12:2 “Do not be conformed to this world, but be transformed by the renewal of your mind, that by testing you may discern what is the will of God, what is good and acceptable and perfect.”</li>
+      <li>Proverbs 11:14 “Where there is no guidance, a people falls, but in an abundance of counselors there is safety.”</li>
       <li>What is Jesus saying in this scripture?</li>
     </ul>
 
   <h2>Discussion Questions</h2>
 
   <ul>
-    <li>Think about the 5 closest people to you. How do they impact your life on a day to day? What examples are they setting for you to live by?</li>
-    <li>What habits have you created for yourself? Good ones AND bad ones. How do you think these habits have helped you or hurt you?</li>
-    <li>How often do you find yourself saying that your influence isn’t enough to impact someone? Explain.</li>
+    <li>How do you personally pick out friends? Are you pursuing good friends or do you just let anyone be your friend?</li>
+    <li>Who are your biggest mentors? Are these mentors leading you to your greatness or are they leading you down the wrong path?</li>
+    <li>Are you following the filling first? Remind them that following the filling means following the Holy Spirit and they are to follow God first over all other people because He is the one to bring true fruits and blessings to them.</li>
   </ul>
 
   <h2>Life Application</h2>
@@ -74,7 +74,7 @@
     <p>We want students walking away with 1 or 2 things they are going to do SOON to apply what they discussed.</p>
 
     <ul>
-      <li>What steps can you take this week to grow as a kingdom influencer? Encourage them to step into the word of God because to be an influencer, you have to grow a relationship with God.</li>
+      <li>Which area in your life do you need to begin following a great influencer in? School, work, home life, friend groups?</li>
     </ul>
 
   <h2>Take It Out</h2>
