update for Influencer week 4

--- a/GroupGuide.html
+++ b/GroupGuide.html
@@ -3,11 +3,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <head>
-<<<<<<< HEAD
-  <title>Influencer - Week 3</title>
-=======
-  <title>Influencer - Week 2</title>
->>>>>>> b183ec9ffb3a099d58c96606026de81028186938
+  <title>Influencer - Week 4</title>
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   <style>
     body {
@@ -37,67 +33,40 @@
 
   <div align="middle"><img src="./img/guide-logo.jpg" alt="Group Guide Series Logo" style="max-width:80%;height:auto;"></div>
   
-<<<<<<< HEAD
-  <h1><i>Influencer</i> Week 3</h1>
-=======
-  <h1><i>Influencer</i> Week 2</h1>
->>>>>>> b183ec9ffb3a099d58c96606026de81028186938
+  <h1><i>Influencer</i> Week 4</h1>
 
   <h2>Life / Intro Questions (Choose one or two)</h2>
 
     <ul>
-<<<<<<< HEAD
-      <li>How long does it take for you to get ready in the morning?</li>
-      <li>Would you rather get up later in the morning and not look the best or get up earlier to make your outer appearance look great?</li>
-=======
-      <li>Who are some of your biggest influences in your life? Could be family, friends, or even someone famous.</li>
-      <li>Why are those people such big influences in your life? Give examples.</li>
->>>>>>> b183ec9ffb3a099d58c96606026de81028186938
+      <li>What are some ways to serve others?</li>
+      <li>Personally, what stops you from serving others? Give examples.</li>
     </ul>
 
   <h2>Connection Question</h2>
 
     <ul>
-<<<<<<< HEAD
-      <li>How often do you find yourself caring more about your outer appearance than your inner appearance?</li>
-=======
-      <li>Where do you see yourself in the future? Job, family, finances? Are the people in your life supporting you in a way so that you can obtain the future that you want or are they dragging you away from that?</li>
->>>>>>> b183ec9ffb3a099d58c96606026de81028186938
+      <li>Have you ever chosen not to serve someone because you did not want to, but you knew you should have? Explain.</li>
     </ul>
 
   <h2>Sermon in a Sentence</h2>
 
     <ul>
-<<<<<<< HEAD
-      <li>Influence grows inside out.</li>
-=======
-      <li>Who is leading you and where are they leading you to?</li>
->>>>>>> b183ec9ffb3a099d58c96606026de81028186938
+      <li>To Influence is to Serve.</li>
     </ul>
 
   <h2>Scripture</h2>
  
     <ul>
-<<<<<<< HEAD
-      <li>Matthew 7:3-5 “Why do you see the speck that is in your brother's eye, but do not notice the log that is in your own eye? Or how can you say to your brother, ‘Let me take the speck out of your eye,’ when there is the log in your own eye? You hypocrite, first take the log out of your own eye, and then you will see clearly to take the speck out of your brother's eye.”</li>
-=======
-      <li>Proverbs 11:14 “Where there is no guidance, a people falls, but in an abundance of counselors there is safety.”</li>
->>>>>>> b183ec9ffb3a099d58c96606026de81028186938
+      <li>John 13:4-5 “so he got up from the meal, took off his outer clothing, and wrapped a towel around his waist. 5 After that, he poured water into a basin and began to wash his disciples’ feet, drying them with the towel that was wrapped around him.”</li>
       <li>What is Jesus saying in this scripture?</li>
     </ul>
 
   <h2>Discussion Questions</h2>
 
   <ul>
-<<<<<<< HEAD
-    <li>What negative and positive habits do you have? Share them.</li>
-    <li>How often do you find yourself thinking you know everything? Be honest. Explain.</li>
-    <li>If I asked you who you are, would you be able to tell me? What are your strengths, weaknesses, values, etc.?</li>
-=======
-    <li>How do you personally pick out friends? Are you pursuing good friends or do you just let anyone be your friend?</li>
-    <li>Who are your biggest mentors? Are these mentors leading you to your greatness or are they leading you down the wrong path?</li>
-    <li>Are you following the filling first? Remind them that following the filling means following the Holy Spirit and they are to follow God first over all other people because He is the one to bring true fruits and blessings to them.</li>
->>>>>>> b183ec9ffb3a099d58c96606026de81028186938
+    <li>What does “going the extra mile” mean? What things in your life are you going the extra mile for? What do you think would happen if you went the extra mile in being an influencer?</li>
+    <li>What does integrity mean? Personally, do you think you have good integrity? When no one is looking are you always doing the right thing?</li>
+    <li>Being honest, are you the type of person that cares for people? Will you help someone who needs help even if it’s uncomfortable or awkward?</li>
   </ul>
 
   <h2>Life Application</h2>
@@ -105,12 +74,7 @@
     <p>We want students walking away with 1 or 2 things they are going to do SOON to apply what they discussed.</p>
 
     <ul>
-<<<<<<< HEAD
-      <li>If you are not self aware already, what are some things you could do to become more self aware?</li>
-      <li>fpStudents Instagram will be having a 60 second clip teaching you about the basics of kingdom influence so make sure you take a MINUTE out of your day to listen to it and learn something from it. Next week we will come back and each talk about something we took away from the clips.</li>
-=======
-      <li>Which area in your life do you need to begin following a great influencer in? School, work, home life, friend groups?</li>
->>>>>>> b183ec9ffb3a099d58c96606026de81028186938
+      <li>If you go the extra mile, care for people, and do what is right when no one is watching, God can use you for anything. This week, what one thing can you work on? Going the extra mile, caring for people, or having integrity?</li>
     </ul>
 
   <h2>Take It Out</h2>
